--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,7 @@ version = "0.1.0"
 license = "MIT OR Apache-2.0"
 
 [workspace]
-members = [
-    "sensor_logic"
-]
+members = []
 
 [dependencies]
 # Change stm32f103c8 to your chip name, if necessary.
