--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,8 +3,8 @@
 runner = "probe-rs run --chip STM32F103C8"
 
 [build]
-#target = "thumbv7m-none-eabi"
-target = "x86_64-unknown-linux-gnu"
+target = "thumbv7m-none-eabi"
+#target = "x86_64-unknown-linux-gnu"
 
 [env]
 DEFMT_LOG = "trace"
