--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sensor_lib_sn65hvd230"]
 	path = sensor_lib_sn65hvd230
 	url = git@github.com:Personal-Data-Acquisition/sensor_lib_sn65hvd230.git
+[submodule "sensor_lib_max6675"]
+	path = sensor_lib_max6675
+	url = git@github.com:Personal-Data-Acquisition/sensor_lib_max6675.git
