--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.1.0"
 license = "MIT OR Apache-2.0"
 
 [workspace]
-members = ["sensor_lib_sn65hvd230", ]
+members = ["sensor_lib_sn65hvd230", "sensor_lib_max6675",]
 
 [dependencies]
 # Change stm32f103c8 to your chip name, if necessary.
