--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ panic-probe = { version = "0.3", features = ["print-defmt"] }
 futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
 heapless = { version = "0.8", default-features = false }
 nb = "1.0.0"
-ublox = { version = "0.4.5", default-features = false }
+arrform = "0.1.1"
 [profile.dev]
 opt-level = "s"
 
