--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ heapless = { version = "0.8", default-features = false }
 nb = "1.0.0"
 arrform = "0.1.1"
 mpu9250 = {version = "0.25.0",features = ["i2c"]}
+half = {version = "2.2.1",default-features = false}
 [profile.dev]
 opt-level = "s"
 
